--- a/styles/components/inputs.css
+++ b/styles/components/inputs.css
@@ -3,5 +3,9 @@
 }
 
 .input {
-  @apply px-4 py-2 border border-gray-300 rounded;
+  @apply px-4 py-2 bg-white border border-gray-400 rounded outline-none;
+
+  &:focus {
+    @apply border-blue;
+  }
 }
