--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -8,3 +8,5 @@
 /* Components */
 @import "./components/buttons.css";
 @import "./components/inputs.css";
+@import "./components/cards.css";
+@import "./components/navbar.css";
